# rdparse

./: CMakeLists.txt
include/rdparse/: parser.h  util.h
src/: parser.c  util.c
